@@ -238,7 +238,7 @@ cal6.time_comp = false;
 					<TD width="93%" {tip text="Select sorting direction and criteria"}>
 						<SELECT SIZE="1" name="order">
 							<OPTION value="customername" SELECTED>{t}First/last or Company name{/t}</OPTION>
-							<OPTION value="brutto">{t}Gross value{/t}</OPTION> 
+							<OPTION value="grossvalue">{t}Gross value{/t}</OPTION> 
 						</SELECT><BR><BR>
 						<SELECT SIZE="1" name="direction">
 							<OPTION value="asc" SELECTED>{t}ascending{/t}</OPTION>
